Update AESEncryptAlgorithm.java
improvement base64 encode decode performance. Totally increase almost over 200%